Fixede mad onkring friis

--- a/omkring_friis.html
+++ b/omkring_friis.html
@@ -19,13 +19,15 @@
 
 <!-- Imellem disse to 'div'-tags kan du fylde indhold ind på siden. -->
 <div class="content">
-<p>Føtex har altid noget godt i køledisken.....</p>
+<p>Føtex har altid noget godt i køledisken..... MED LØGG PÅ</p> <p>Bare snatch scooters corny big <a href="https://www.fleggaard.dk/SL/PI/637/128/d60c8b4d-54c1-4a07-8bb3-d4d33418a736.jpg">gimme gimme</a></p>
+
+<img src="images\scooter.jpg">
 
 </div>
 
 <!-- Footer -->
 <div class="footer">
-  <p>Copyright - Den Virtuelle Kantine - 2018</p>
+  <p>Copyright - Den Virtuelle Kantine - 2018</p> 
 </div>
 
 </body>
