--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <title>Den Virtuelle Kantine</title>
 <link rel="stylesheet" type="text/css" href="styling.css">
 </head>
-<body>
+<body style='font-family="Comic sans MS"'>
+
 
 <!-- Header -->
 <div class="sticky-header">
